<resources>
    <string name="app_name">PetShop</string>
    <string name="tvmenu">MENU PRINCIPAL</string>

    <!-- Activity_main-->
    <string name="btnQuienes">¿Quienes somos?</string>
    <string name="btnMenú">Cambiar idioma</string>
    <string name="btnListar">Listar Usuarios</string>
    <string name="btnMascotas">Registrar mascota</string>
    <string name="btn_salir">Salir</string>
    <!-- FIN Activity_main-->

    <!-- Activity_main2-->
    <string name="lblRegistroM">Registro de Mascotas</string>
    <string name="lblTipo">Mascota:</string>
    <string name="lblGenero">Género:</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblRaza">Raza:</string>
    <string name="lblEdad">Edad(meses):</string>
    <string name="seleccioneApp">Seleccione la aplicación</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtRaza">Raza</string>
    <string name="txtEdad">Edad</string>

    <string name="radioM">Macho</string>
    <string name="radioH">Hembra</string>

    <string name="btnAgregar">Agregar</string>
    <string name="btnRegistro">Registros</string>
    <string name="btnFoto">Agregar foto</string>

    <string name="spinnerP">Perro</string>
    <string name="spinnerG">Gato</string>
    <string name="spinnerA">Ave</string>
    <!-- FIN Activity_main2-->

    <!--Errores-->
    <string name="error_campoObligatorio">Campo Obligatorio</string>
    <string name="error_campoNumerico">Campo numérico</string>
    <string name="error_valorEntre0y100">Valor entre 0 y 100</string>

    <string name="error_camposV">ERROR: Campos vacios</string>
    <string name="error_falloRegistrar">Fallo al registrar</string>
    <string name="error_UsuarioYaRegistrado">Usuario ya registrado!</string>
    <string name="error_contraseñaCorta">Contraseña muy corta</string>
    <string name="error_contraseñaCoincide">Las contraseñas no coinciden</string>
    <string name="error_email">Direccion email no valido</string>
    <!--Fin Errores-->
    <!--Win-->
    <string name="win_registro_exitoso">Registro exitoso!</string>
    <!--Fin win-->



    <!-- Activity Login-->
    <string name="txtUsuario">Usuario</string>
    <string name="txtPassword">Contraseña</string>

    <string name="btnIncio">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <!-- FIN Activity Login-->

    <!-- Activity Nuevo Usuario-->
    <string name="lblCuenta">Crear cuenta nueva</string>

    <string name="txtRApellido">Apellido(s)</string>
    <string name="txtRNombre">Nombre(s)</string>
    <string name="txtREdad">Edad</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtRUsuario">Usuario</string>
    <string name="txtRpass">Contraseña</string>
    <string name="txtRePass">Repita contraseña</string>

    <string name="btnAddRegistro">Registrar</string>
    <string name="btnCancel">Cancelar</string>

    <!-- FIN Activity_Nuevo Usuario-->

    <!-- Activity Listas-->
    <string name="lblURegistrados">Usuarios Registrados</string>
    <string name="lblMascotasR">Mascotas Registradas</string>

    <!-- FIN Activity Listas-->

    <!-- Activity Presentacion-->
    <string name="lblQuienes">¿Quienes somos?</string>
    <string name="lblPresentacion">Somos PETSHOP un centro de adopción de mascotas que no ofrece solamente animales, sino compañeros de tu vida que alegrarán tu hogar.</string>
    <string name="lblDireccion">Dirección: Av.Heroínas/Antezana y 16 de Julio</string>
    <string name="lblNumero">Teléfono: 4223994–6423453</string>
    <string name="lblEmail">Email: pets@gmail.com</string>
    <!-- FIN Activity Presentacion-->

    <!-- Activity Idioma-->
    <string name="lblCambiarIdiomo">Cambiar Idioma</string>

    <string name="btnEspañol">Español</string>
    <string name="btnIngles">Ingles</string>
    <!--Fin Activity Idioma-->
</resources>
