<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/portadacuenta"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/lblCuenta"
            android:textSize="34sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ccc"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/RegNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtRNombre"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>

                <EditText
                    android:id="@+id/RegApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtRApellido"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>

                <EditText
                    android:id="@+id/RegCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtCorreo"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>

                <EditText
                    android:id="@+id/RegUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtRUsuario"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>

                <EditText
                    android:id="@+id/RegPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtRpass"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>

                <EditText
                    android:id="@+id/RegPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/txtRePass"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ccc"
                    android:textColor="#fff"/>



                <Button
                    android:id="@+id/btnRegRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_redondeado_white"
                    android:textSize="16sp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="serif"
                    android:text="@string/btnAddRegistro"
                    android:textStyle="bold"
                    android:textColor="#403f3f"/>

                <Button
                    android:id="@+id/btnRegCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_redondeado_registrar"
                    android:textSize="16sp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="serif"
                    android:text="@string/btnCancel"
                    android:textColor="#403f3f"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>