<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cambiar_idioma">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/portada"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/lblCambiarIdiomo"
            android:textSize="34sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ccc"/>

        <Button
            android:id="@+id/btnEspañol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redondeado_azul"
            android:text="@string/btnEspañol"
            android:textColor="#403f3f"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"/>

        <Button
            android:id="@+id/btnIngles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redondeado_registrar"
            android:fontFamily="serif"
            android:text="@string/btnIngles"
            android:textColor="#403f3f"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
</RelativeLayout>