<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/portadamenu"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="top|center"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/tvmenu"
            android:textSize="34sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    app:srcCompat="@drawable/ingreso" />

                <Button
                    android:id="@+id/btnRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/btn_redondeado_azul"
                    android:fontFamily="serif"
                    android:text="@string/btnListar"
                    android:textSize="12sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:textColor="#403f3f"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    app:srcCompat="@drawable/mascota" />

                <Button
                    android:id="@+id/btnIngreso"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/btn_redondeado_azul"
                    android:fontFamily="serif"
                    android:text="@string/btnMascotas"
                    android:textSize="12sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:textColor="#403f3f"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/config" />

                <Button
                    android:id="@+id/btnConfig"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/btn_redondeado_registrar"
                    android:fontFamily="serif"
                    android:text="@string/btnMenú"
                    android:textSize="12sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:textColor="#403f3f"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/somos" />

                <Button
                    android:id="@+id/btnSomos"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/btn_redondeado_registrar"
                    android:fontFamily="serif"
                    android:text="@string/btnQuienes"
                    android:textSize="12sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:textColor="#403f3f"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:id="@+id/btnSalir"
            android:text="@string/btn_salir"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="#fff"/>
    </LinearLayout>
</RelativeLayout>